Projeto Semi-Recuperado

--- a/.env
+++ b/.env
@@ -50,11 +50,11 @@ CI_ENVIRONMENT = development
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = localhost
-database.default.database = cadastro_de_filmes
-database.default.username = codeigniter
-database.default.password = ""
-database.default.DBDriver = MySQLi
+# database.default.hostname = 
+# database.default.database = APPPATH.'/Database/db/filmes.db'
+# database.default.username = 
+# database.default.password = 
+# database.default.DBDriver = sqlite3
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4
